# rate

./: Cargo.toml  Makefile  README.md  TODO.md  ask.sh  db  rate.db  test.db  todo.txt
.github/workflowo/: release_macos.yml
.github/workflows/: freebsd_release.yml  linux_windows_release.yml  macos_release.yml  release_freebsd.yml  release_linux.yml  release_macos.yml  scp.yml  ssh.yml
src/: database.rs  exchange.rs  help.rs  lib.rs  main.rs  rate.rs  test.rs
